# BehaviorAnalysis

./: .gitignore  LICENSE  README.md  bp_variance.py  clustering_criteria.py  pyproject.toml  select_roi.py  test_script.py
src/: cutoff.py  main.py  rolling_variance.py  test_script.py
