[tool.poetry]
name = "behavioranalysis"
version = "0.1.0"
description = ""
authors = ["caroll675 <zhiqinchen@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.2.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
