[tool.poetry]
name = "behavioranalysis"
version = "0.1.0"
description = ""
authors = ["caroll675 <zhiqinchen@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.2.0"
tqdm = "^4.66.1"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
